fixing dark mode flashing

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,14 +7,14 @@
   --color-prePrimary: hsl(185, 52%, 95%);
   --color-secondary: hsl(183, 50%, 10%);
   --color-tertiary: hsl(243, 80%, 20%);
-  --color-accent: #007a63;
+  --color-accent: hsl(169, 100%, 24%);
 }
 .dark {
   --color-primary: hsl(198, 80%, 8%);
   --color-prePrimary: hsl(197, 80%, 12%);
   --color-secondary: hsl(197, 80%, 90%);
   --color-tertiary: hsl(243, 80%, 80%);
-  --color-accent: #00e195;
+  --color-accent: hsl(160, 100%, 44%);
 }
 
 .backgroundGradient {
